Closed
Bug 1968586
Opened 3 months ago
Closed 2 months ago
Crash reporter fails to build with --disable-backgroundtasks
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
142 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox-esr140 | --- | fixed |
firefox139 | --- | wontfix |
firefox140 | --- | wontfix |
firefox141 | --- | fixed |
firefox142 | --- | fixed |
People
(Reporter: mathew.hodson, Assigned: mathew.hodson)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-esr140+
|
Details | Review |
In file included from Unified_cpp_crashreporter0.cpp:20:
D:/repos/gecko-dev/toolkit/crashreporter/nsExceptionHandler.cpp(1427,7): error: use of undeclared identifier 'BackgroundTasks'
1427 | if (BackgroundTasks::IsBackgroundTaskMode()) {
| ^
D:/repos/gecko-dev/toolkit/crashreporter/nsExceptionHandler.cpp(1570,36): error: use of undeclared identifier 'BackgroundTasks'
1570 | if (doReport && isSafeToDump && !BackgroundTasks::IsBackgroundTaskMode()) {
|
2 errors generated.
Assignee | ||
Comment 1•3 months ago
|
||
Comment 2•3 months ago
|
||
Set release status flags based on info from the regressing bug 1889462
status-firefox139:
--- → affected
status-firefox140:
--- → affected
status-firefox141:
--- → affected
status-firefox-esr128:
--- → unaffected
Updated•3 months ago
|
Comment 3•2 months ago
|
||
The severity field is not set for this bug.
:gsvelto, could you have a look please?
For more information, please visit BugBot documentation.
Flags: needinfo?(gsvelto)
Updated•2 months ago
|
Severity: -- → S3
Flags: needinfo?(gsvelto)
Pushed by gsvelto@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/a9f1df5d4ec1
https://hg.mozilla.org/integration/autoland/rev/8106027a8d37
Fix crash reporter build with --disable-backgroundtasks r=gsvelto
Comment 7•2 months ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 months ago
status-firefox142:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
Comment 8•2 months ago
|
||
The patch landed in nightly and beta is affected.
:mathew.hodson, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- See https://wiki.mozilla.org/Release_Management/Requesting_an_Uplift for documentation on how to request an uplift.
- If no, please set
status-firefox141
towontfix
.
For more information, please visit BugBot documentation.
Flags: needinfo?(mathew.hodson)
Assignee | ||
Comment 9•2 months ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D251213
Updated•2 months ago
|
Attachment #9496905 -
Flags: approval-mozilla-beta?
Comment 10•2 months ago
|
||
firefox-beta Uplift Approval Request
- User impact if declined: Some downstream distributors could have trouble compiling if they disable background tasks.
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: no
- Risk associated with taking this patch: low
- Explanation of risk level: Small patch that doesn't change behaviour in the default configuration.
- String changes made/needed: no
- Is Android affected?: no
Assignee | ||
Updated•2 months ago
|
Flags: needinfo?(mathew.hodson)
Updated•2 months ago
|
Attachment #9496905 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•2 months ago
|
Comment 11•2 months ago
|
||
uplift |
Updated•2 months ago
|
Updated•1 month ago
|
status-firefox-esr115:
--- → unaffected
status-firefox-esr140:
--- → affected
Comment 12•1 month ago
|
||
Please nominate this for ESR140 when you get a chance.
Flags: needinfo?(mathew.hodson)
Assignee | ||
Comment 13•1 month ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D251213
Updated•1 month ago
|
Attachment #9499691 -
Flags: approval-mozilla-esr140?
Assignee | ||
Updated•1 month ago
|
Flags: needinfo?(mathew.hodson)
Comment 14•1 month ago
|
||
firefox-esr140 Uplift Approval Request
- User impact if declined: Some downstream distributors could have trouble compiling if they disable background tasks.
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: n/a
- Risk associated with taking this patch: low
- Explanation of risk level: Small patch that doesn't change behaviour in the default configuration.
- String changes made/needed: no
- Is Android affected?: no
Updated•1 month ago
|
Attachment #9499691 -
Flags: approval-mozilla-esr140? → approval-mozilla-esr140+
Updated•1 month ago
|
Comment 15•1 month ago
|
||
uplift |
Updated•1 month ago
|
QA Whiteboard: [qa-triage-done-c142/b141]
You need to log in
before you can comment on or make changes to this bug.
Description
•