Bug 1968586 - Fix crash reporter build with --disable-backgroundtasks  a=pascalc

Original Revision: https://phabricator.services.mozilla.com/D251213

Differential Revision: https://phabricator.services.mozilla.com/D255065